[gd_scene load_steps=5 format=3 uid="uid://be3c84w1whbk5"]

[ext_resource type="Script" uid="uid://57rntxafj63v" path="res://components/robot_base.gd" id="1_0vy3u"]
[ext_resource type="PackedScene" uid="uid://bq1jufbmii761" path="res://components/charge_component.tscn" id="2_52f4o"]
[ext_resource type="PackedScene" uid="uid://cbhvaxh4k0aux" path="res://components/autonomy_component.tscn" id="3_w67nb"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3kc5t"]

[node name="RobotBase" type="VehicleBody3D" node_paths=PackedStringArray("charge_component", "auto_component")]
script = ExtResource("1_0vy3u")
charge_component = NodePath("ChargeComponent")
auto_component = NodePath("AutonomyComponent")

[node name="ChargeComponent" parent="." instance=ExtResource("2_52f4o")]

[node name="CenterOfMass" type="Marker3D" parent="."]

[node name="Nametag" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.582233, 0)
billboard = 1
double_sided = false
text = "unnamed robot"
autowrap_mode = 2
width = 400.0

[node name="AutonomyComponent" parent="." instance=ExtResource("3_w67nb")]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_3kc5t")
